2010-01-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Reset LIBS after check for libgcc symbols.

2010-01-25  Colin Watson  <cjwatson@ubuntu.com>

	* util/hostdisk.c (open_device): Add trailing newline to debug
	message.

2010-01-25  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Check for `limits.h'.
	* util/misc.c: Include `<limits.h>' (for PATH_MAX).

2010-01-24  Robert Millan  <rmh.grub@aybabtu.com>

	* loader/mips/linux.c (grub_cmd_linux, grub_cmd_initrd): Don't
	capitalize error strings.

2010-01-24  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Add a recovery mode.

2010-01-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for libgcc symbols with -nostdlib.

2010-01-23  BVK Chaitanya  <bvk.groups@gmail.com>

	* acinclude.m4: Quote underquoted AC_DEFUN parameters.

2010-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_setcolorstate): Allocate on
	stack since heap may be unavailable at that point.
	(grub_ofconsole_gotoxy): Likewise.

2010-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Check for _restgpr_14_x.
	* include/grub/powerpc/libgcc.h [HAVE__RESTGPR_14_X]: Add _restgpr_*_x
	and _savegpr_* prototypes.

2010-01-22  Robert Millan  <rmh.grub@aybabtu.com>

	Use generic grub_reboot() for i386-efi.

	* kern/efi/efi.c [__i386__] (grub_reboot): Remove.
	* kern/i386/efi/startup.S: Include `"../realmode.S"'.
	* kern/i386/realmode.S: Include `<grub/i386/pc/memory.h>'.

2010-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/ieee1275/init.c (grub_machine_set_prefix): Don't check for
	presence of "prefix" variable as it breaks when normal.mod is
	embedded.

2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_dimensions): Allocate on
	stack since heap is unavailable at that point.

2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>
